<resources>
    <string name="app_name">Chatty</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_account">Login To Account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes">Save Changes</string>
    <string name="user_status">User Status</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="friends_0">Friends: </string>
    <string name="decline_friend_request">Decline Friend Request</string>
</resources>
