<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/register_tool_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:layout_below="@+id/register_tool_bar"
        android:layout_alignLeft="@+id/req_display_name"
        android:layout_alignStart="@+id/req_display_name"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/register_text_view1"
        android:textSize="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_below="@id/register_text_view1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/req_display_name"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/req_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:id="@+id/req_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/req_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:id="@+id/req_password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="102dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/req_password"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="25dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFFFFF"/>
</RelativeLayout>