<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/login_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_account"
        android:layout_marginTop="82dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/register_text_view1"
        android:textSize="20dp"
        android:layout_below="@+id/register_tool_bar"
        android:layout_alignLeft="@+id/login_email"
        android:layout_alignStart="@+id/login_email" />



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_text_view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"

        android:id="@+id/login_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        android:id="@+id/login_pw">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_pw"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textSize="18dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFFFFF"/>
</RelativeLayout>